# mojodep

./: .cspell.json  DESIGN.md  pyproject.toml
.github/workflows/: build.yaml
src/mojodep/: lock.py  main.py
