[project]
name = "mojodep"
version = "0.1.0"
description = "Ensuring reproducible builds of ROS 2 packages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mojodep-rosdistro",
    "mojodep-colcon",
    "mojodep-rosdep",
    "mojodep-core",
    "mojodep-lockfile",
]

[tool.uv.sources]
mojodep-rosdistro = { workspace = true }
mojodep-colcon = { workspace = true }
mojodep-rosdep = { workspace = true }
mojodep-core = { workspace = true }
mojodep-lockfile = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mojodep"]

[project.scripts]
mojodep = "mojodep.main:main"
